whitespace button fix

--- a/src/assets/styles/modules/button.scss
+++ b/src/assets/styles/modules/button.scss
@@ -76,6 +76,7 @@ button.square-button:active:after{
 button.square-button .button-text{
   margin-top: 1px;
   width: 55%;
+  white-space: normal;
 }
 button.square-button .button-glyph{
   align-self: flex-end;
